# docs/source/_static/openapi_v1.json
@@ -1,244 +1,50 @@
-{
-  "openapi": "3.1.0",
-  "info": {
-    "title": "OE Python Template",
-    "termsOfService": "https://oe-python-template.readthedocs.io/en/latest/",
-    "contact": {
-      "name": "Helmut Hoffer von Ankershoffen",
-      "url": "https://github.com/helmut-hoffer-von-ankershoffen",
-      "email": "helmuthva@gmail.com"
-    },
-    "version": "1.0.0"
-  },
-  "paths": {
-    "/health": {
-      "get": {
-        "tags": [
-          "Observability"
-        ],
-        "summary": "Health",
-        "description": "Check the health of the service.\n\nThis endpoint returns the health status of the service.\nThe health status can be either UP or DOWN.\nIf the service is healthy, the status will be UP.\nIf the service is unhealthy, the status will be DOWN and a reason will be provided.\nThe response will have a 200 OK status code if the service is healthy,\nand a 500 Internal Server Error status code if the service is unhealthy.\n\nReturns:\n    Health: The health status of the service.",
-        "operationId": "health_health_get",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Health"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/healthz": {
-      "get": {
-        "tags": [
-          "Observability"
-        ],
-        "summary": "Health",
-        "description": "Check the health of the service.\n\nThis endpoint returns the health status of the service.\nThe health status can be either UP or DOWN.\nIf the service is healthy, the status will be UP.\nIf the service is unhealthy, the status will be DOWN and a reason will be provided.\nThe response will have a 200 OK status code if the service is healthy,\nand a 500 Internal Server Error status code if the service is unhealthy.\n\nReturns:\n    Health: The health status of the service.",
-        "operationId": "health_healthz_get",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Health"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/hello-world": {
-      "get": {
-        "tags": [
-          "Basics"
-        ],
-        "summary": "Hello World",
-        "description": "Return a hello world message.\n\nReturns:\n    _HelloWorldResponse: A response containing the hello world message.",
-        "operationId": "hello_world_hello_world_get",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/_HelloWorldResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/echo/{text}": {
-      "get": {
-        "tags": [
-          "Basics"
-        ],
-        "summary": "Echo",
-        "description": "Echo back the provided text.\n\nArgs:\n    text (str): The text to echo.\n\nReturns:\n    Echo: The echo.\n\nRaises:\n    422 Unprocessable Entity: If text is not provided or empty.",
-        "operationId": "echo_echo__text__get",
-        "parameters": [
-          {
-            "name": "text",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "title": "Text"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Echo"
-                }
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  },
-  "components": {
-    "schemas": {
-      "Echo": {
-        "properties": {
-          "text": {
-            "type": "string",
-            "minLength": 1,
-            "title": "Text",
-            "description": "The echo",
-            "examples": [
-              "HELLO, WORLD!"
-            ]
-          }
-        },
-        "type": "object",
-        "required": [
-          "text"
-        ],
-        "title": "Echo",
-        "description": "Response model for echo endpoint."
-      },
-      "HTTPValidationError": {
-        "properties": {
-          "detail": {
-            "items": {
-              "$ref": "#/components/schemas/ValidationError"
-            },
-            "type": "array",
-            "title": "Detail"
-          }
-        },
-        "type": "object",
-        "title": "HTTPValidationError"
-      },
-      "Health": {
-        "properties": {
-          "status": {
-            "$ref": "#/components/schemas/HealthStatus"
-          },
-          "reason": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Reason"
-          }
-        },
-        "type": "object",
-        "required": [
-          "status"
-        ],
-        "title": "Health",
-        "description": "Health status model."
-      },
-      "HealthStatus": {
-        "type": "string",
-        "enum": [
-          "UP",
-          "DOWN"
-        ],
-        "title": "HealthStatus",
-        "description": "Health status enumeration."
-      },
-      "ValidationError": {
-        "properties": {
-          "loc": {
-            "items": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "integer"
-                }
-              ]
-            },
-            "type": "array",
-            "title": "Location"
-          },
-          "msg": {
-            "type": "string",
-            "title": "Message"
-          },
-          "type": {
-            "type": "string",
-            "title": "Error Type"
-          }
-        },
-        "type": "object",
-        "required": [
-          "loc",
-          "msg",
-          "type"
-        ],
-        "title": "ValidationError"
-      },
-      "_HelloWorldResponse": {
-        "properties": {
-          "message": {
-            "type": "string",
-            "title": "Message",
-            "description": "The hello world message",
-            "examples": [
-              "Hello, world!"
-            ]
-          }
-        },
-        "type": "object",
-        "required": [
-          "message"
-        ],
-        "title": "_HelloWorldResponse",
-        "description": "Response model for hello-world endpoint."
-      }
-    }
-  }
-}
+Traceback (most recent call last):
+  File "/Users/helmut/Code/oe-python-template/.nox/docs-3-13/bin/oe-python-template", line 4, in <module>
+    from oe_python_template.cli import cli
+  File "/Users/helmut/Code/oe-python-template/src/oe_python_template/__init__.py", line 8, in <module>
+    from .models import Echo, Health, HealthStatus, Utterance
+  File "/Users/helmut/Code/oe-python-template/src/oe_python_template/models.py", line 5, in <module>
+    from pydantic import BaseModel, Field
+  File "<frozen importlib._bootstrap>", line 1412, in _handle_fromlist
+  File "/Users/helmut/Code/oe-python-template/.nox/docs-3-13/lib/python3.13/site-packages/pydantic/__init__.py", line 421, in __getattr__
+    module = import_module(module_name, package=package)
+  File "/opt/homebrew/Cellar/python@3.13/3.13.2/Frameworks/Python.framework/Versions/3.13/lib/python3.13/importlib/__init__.py", line 88, in import_module
+    return _bootstrap._gcd_import(name[level:], package, level)
+           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+  File "/Users/helmut/Code/oe-python-template/.nox/docs-3-13/lib/python3.13/site-packages/pydantic/fields.py", line 15, in <module>
+    import annotated_types
+  File "/Users/helmut/Code/oe-python-template/.nox/docs-3-13/lib/python3.13/site-packages/annotated_types/__init__.py", line 358, in <module>
+    @dataclass
+     ^^^^^^^^^
+  File "/opt/homebrew/Cellar/python@3.13/3.13.2/Frameworks/Python.framework/Versions/3.13/lib/python3.13/dataclasses.py", line 1305, in dataclass
+    return wrap(cls)
+  File "/opt/homebrew/Cellar/python@3.13/3.13.2/Frameworks/Python.framework/Versions/3.13/lib/python3.13/dataclasses.py", line 1295, in wrap
+    return _process_class(cls, init, repr, eq, order, unsafe_hash,
+                          frozen, match_args, kw_only, slots,
+                          weakref_slot)
+  File "/opt/homebrew/Cellar/python@3.13/3.13.2/Frameworks/Python.framework/Versions/3.13/lib/python3.13/dataclasses.py", line 1164, in _process_class
+    text_sig = str(inspect.signature(cls)).replace(' -> None', '')
+                   ~~~~~~~~~~~~~~~~~^^^^^
+  File "/opt/homebrew/Cellar/python@3.13/3.13.2/Frameworks/Python.framework/Versions/3.13/lib/python3.13/inspect.py", line 3344, in signature
+    return Signature.from_callable(obj, follow_wrapped=follow_wrapped,
+           ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+                                   globals=globals, locals=locals, eval_str=eval_str)
+                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+  File "/opt/homebrew/Cellar/python@3.13/3.13.2/Frameworks/Python.framework/Versions/3.13/lib/python3.13/inspect.py", line 3070, in from_callable
+    return _signature_from_callable(obj, sigcls=cls,
+                                    follow_wrapper_chains=follow_wrapped,
+                                    globals=globals, locals=locals, eval_str=eval_str)
+  File "/opt/homebrew/Cellar/python@3.13/3.13.2/Frameworks/Python.framework/Versions/3.13/lib/python3.13/inspect.py", line 2608, in _signature_from_callable
+    return _get_signature_of(init)
+  File "/opt/homebrew/Cellar/python@3.13/3.13.2/Frameworks/Python.framework/Versions/3.13/lib/python3.13/inspect.py", line 2503, in _signature_from_callable
+    sig = _get_signature_of(obj.__func__)
+  File "/opt/homebrew/Cellar/python@3.13/3.13.2/Frameworks/Python.framework/Versions/3.13/lib/python3.13/inspect.py", line 2577, in _signature_from_callable
+    return _signature_from_function(sigcls, obj,
+                                    skip_bound_arg=skip_bound_arg,
+                                    globals=globals, locals=locals, eval_str=eval_str)
+  File "/opt/homebrew/Cellar/python@3.13/3.13.2/Frameworks/Python.framework/Versions/3.13/lib/python3.13/inspect.py", line 2400, in _signature_from_function
+    annotations = get_annotations(func, globals=globals, locals=locals, eval_str=eval_str)
+  File "/opt/homebrew/Cellar/python@3.13/3.13.2/Frameworks/Python.framework/Versions/3.13/lib/python3.13/inspect.py", line 245, in get_annotations
+    elif callable(obj):
+         ~~~~~~~~^^^^^
+KeyboardInterrupt
